# slopcrypt

./: .gitignore  CLAUDE.md  LICENSE  README.md  claude.md  debug_decode.py  debug_knock.py  debug_knock2.py  lm_client.py  pyproject.toml  requirements.txt  stego_basek.py  stego_secret.py  test_model_consistency.py  test_stego.py  test_stego_secret.py  utils.py
.github/workflows/: deploy.yml
slopcrypt/: __init__.py  arith_stego.py  compress.py  encode.py  lm_client.py  secret.py
tests/: __init__.py  test_arith_stego.py  test_encode.py  test_secret.py
tests/cross_compat/: __init__.py  conftest.py  generate_fixtures.py  test_crypto_compat.py  test_huffman_compat.py  test_msgpack_compat.py  test_stego_compat.py
tests/fixtures/: crypto_vectors.json  huffman_data.json  secret_blobs.json  stego_roundtrip.json
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: arith-stego.ts  bits.ts  crypto.ts  fixed-client.ts  huffman.ts  main.ts  mock-client.ts  secret.ts  stego.ts  tokens.ts  types.ts  wllama-client.ts
web/test/: cross-compat.test.ts  generate-fixtures.ts  stego-roundtrip.test.ts  wllama-integration.test.ts
