[project]
name = "slopcrypt"
version = "0.1.0"
description = "Hide your data in slop! LLM steganography tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]
llama = [
    "llama-cpp-python>=0.2.0",
]
mlx = [
    "mlx-lm>=0.19.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
addopts = "-v"
